feat: per-user sharing controls for now-playing and remote control
Playback sessions were visible to and controllable by every authenticated
user. Owners can now decide who sees their now-playing sessions and who may
remote-control them.

- Now-playing visibility scope (default EVERYONE, preserving current behaviour)
  and remote-control scope (default PRIVATE, tightening party mode), stored in
  user_sharing_settings with per-capability allowlists in user_sharing_grant.
- Per-session remote-control override on the play queue, with its own allowlist
  (play_queue_control_grant), set via setSessionSharing.
- PlaybackSharingService (cached, deny-as-not-found) enforces canView/canControl;
  ServerStatusController filters nowPlaying per viewer and stamps a controllable
  flag off the RabbitMQ listener thread; sendPlaybackCommand, getPlayQueue and
  getEditableQueue gate on control permission.
- Non-admin shareableUsers query so users can populate an allowlist.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>